infra/copyparty/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: copyparty
  namespace: copyparty
spec:
  selector:
    app: copyparty
  ports:
    - name: http
      port: 80
      targetPort: http
